--- a/index.html
+++ b/index.html
@@ -491,3 +491,175 @@ function closeWelcome(){
 <!-- ===== End Welcome Popup ===== -->
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>SpeedDigits Trainer</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+
+<style>
+:root{
+  --bg:#0e1625;
+  --card:#121826;
+  --muted:#9aa4b2;
+  --accent:#7c3aed;
+  --green:#16a34a;
+  --red:#dc2626;
+}
+body{
+  margin:0;
+  font-family:Inter,system-ui;
+  background:radial-gradient(1200px 600px at top,#1c2a44,var(--bg));
+  color:#e5e7eb;
+}
+.container{
+  max-width:880px;
+  margin:40px auto;
+  padding:24px;
+}
+.header{
+  display:flex;
+  align-items:center;
+  gap:10px;
+  font-size:28px;
+  font-weight:700;
+}
+.sub{color:var(--muted)}
+.card{
+  background:#121826;
+  border-radius:14px;
+  padding:24px;
+  margin-top:20px;
+}
+.hidden{display:none}
+button{
+  background:var(--accent);
+  border:none;
+  color:white;
+  padding:12px;
+  border-radius:10px;
+  font-weight:600;
+  cursor:pointer;
+}
+.download-btn{
+  margin-top:12px;
+  background:#10b981;
+}
+table{
+  width:100%;
+  border-collapse:collapse;
+  margin-top:20px;
+}
+th,td{
+  padding:8px;
+  border-bottom:1px solid #1f2937;
+  font-size:14px;
+}
+.correct{color:#16a34a}
+.wrong{color:#dc2626}
+</style>
+</head>
+
+<body>
+<div class="container">
+
+<!-- ANALYSIS PAGE -->
+<div id="analysis">
+  <div class="header">🖩 <span id="anName">Practice Test</span></div>
+  <div class="sub" id="anMeta"></div>
+
+  <table>
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>Question</th>
+        <th>Your</th>
+        <th>Correct</th>
+        <th>Time</th>
+        <th>Result</th>
+      </tr>
+    </thead>
+    <tbody id="table"></tbody>
+  </table>
+
+  <button class="download-btn" onclick="downloadPDF()">Download PDF</button>
+  <button class="download-btn" onclick="downloadCSV()">Download for Google Sheets</button>
+</div>
+
+</div>
+
+<script>
+/* ===== SAMPLE DATA (replace with real log in your app) ===== */
+let log = [
+  {q:"12 × 14", y:"168", c:"168", t:2, ok:true},
+  {q:"25 + 19", y:"45", c:"44", t:3, ok:false}
+];
+let correct = 1;
+let total = 2;
+
+/* ===== FILL TABLE ===== */
+const table = document.getElementById("table");
+log.forEach((r,i)=>{
+  table.innerHTML += `
+  <tr class="${r.ok ? "correct" : "wrong"}">
+    <td>${i+1}</td>
+    <td>${r.q}</td>
+    <td>${r.y}</td>
+    <td>${r.c}</td>
+    <td>${r.t}s</td>
+    <td>${r.ok ? "✔" : "✖"}</td>
+  </tr>`;
+});
+
+/* ===== GOOGLE SHEETS (CSV) ===== */
+function downloadCSV(){
+  let csv="Question,Your Answer,Correct Answer,Time,Result\n";
+  log.forEach(r=>{
+    csv += `"${r.q}","${r.y}","${r.c}",${r.t},"${r.ok?"Correct":"Wrong"}"\n`;
+  });
+  let blob=new Blob([csv],{type:"text/csv"});
+  let a=document.createElement("a");
+  a.href=URL.createObjectURL(blob);
+  a.download="SpeedDigits_Analysis.csv";
+  a.click();
+}
+</script>
+
+<!-- PDF LIBRARY -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+
+<script>
+/* ===== PDF DOWNLOAD ===== */
+function downloadPDF(){
+  const { jsPDF } = window.jspdf;
+  const pdf = new jsPDF();
+
+  let y=10;
+  pdf.setFontSize(16);
+  pdf.text("SpeedDigits Trainer - Test Analysis",10,y);
+
+  y+=10;
+  pdf.setFontSize(11);
+  pdf.text(`Accuracy: ${(correct/total*100).toFixed(1)}%`,10,y);
+  y+=8;
+
+  log.forEach((r,i)=>{
+    if(y>280){pdf.addPage();y=10;}
+    pdf.text(
+      `${i+1}. ${r.q} | Your: ${r.y} | Correct: ${r.c} | ${r.t}s | ${r.ok?"✔":"✖"}`,
+      10,y
+    );
+    y+=6;
+  });
+
+  pdf.save("SpeedDigits_Analysis.pdf");
+}
+</script>
+
+</body>
+</html>
+
+
