--- a/index.html
+++ b/index.html
@@ -6,8 +6,27 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <!-- 🔥 PASTE FIREBASE CODE HERE -->
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+    import { getAuth } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
+    import { getFirestore } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
-<style>
+    const firebaseConfig = {
+      apiKey: "AIzaSyB1gZFLaT_axhf9OoQsaKK_reK4pHt0Kz4",
+      authDomain: "superdigitscalculator.firebaseapp.com",
+      projectId: "superdigitscalculator",
+      storageBucket: "superdigitscalculator.firebasestorage.app",
+      messagingSenderId: "542254380602",
+      appId: "1:542254380602:web:a3dabf0ae5a8a7911be703"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    window.auth = getAuth(app);
+    window.db = getFirestore(app);
+ </script>
+
+  <style>
 :root{
   --bg:#0e1625;
   --card:#121826;
@@ -386,3 +405,4 @@ function finish(){
 
 </body>
 </html>
+
